# gbc_emulator

./: CMakeLists.txt  README.md
gbc_components/: CMakeLists.txt
gbc_components/include/gbc_components/: instruction_set.h  memory.h  processor.h  utils.h
gbc_components/src/: instruction_set.c  memory.c  processor.c
